--- a/style.css
+++ b/style.css
@@ -2,11 +2,26 @@
     --speed: 3;
 }
 
+body{
+    /* background-color: bisque;
+    background-color: lightsalmon; */
+    background-image: radial-gradient(bisque, moccasin, rgb(226, 155, 32));
+    background-color: rgb(228, 148, 9);
+}
+
+.heading {
+    margin-top: 40px;
+    font-size: 5em;
+    font-family: 'Times New Roman', Times, serif;
+    color: purple;
+}
+
 .machine {
     background-color: burlywood;
     border: dashed brown 2px;
     height: 500px;
     width: 1000px;
+    /* margin-top: 50px; */
     margin: 50px;
     /* display: flex; */
     /* justify-content: center; */
@@ -18,6 +33,8 @@
     width: 275px;
     margin: 20px;
     background-color: lightblue;
+    background-image: radial-gradient(rgb(225, 240, 252), rgb(105, 192, 221));
+
     border: solid darkblue 2px;
 
     overflow: hidden;
@@ -34,13 +51,14 @@
     border-radius: 5px;
 }
 
-#value1, #value3 {
+.down {
     animation-name: slotspin;
     animation-iteration-count: infinite;
     animation-duration: calc((6 - var(--speed)) * 0.1s);
+    /* animation-duration: 0ms; */
 }
 
-#value2 {
+.up {
     animation-name: slotspin_rev;
     animation-iteration-count: infinite;
     animation-duration: calc((6 - var(--speed)) * 0.1s);
@@ -48,18 +66,18 @@
 
 @keyframes slotspin {
     0%{
-        transform: translateY(-200px);
+        transform: translateY(-275px);
     }
     100%{
-        transform: translateY(200px);
+        transform: translateY(275px);
     }
 }
 
 @keyframes slotspin_rev {
     0%{
-        transform: translateY(200px);
+        transform: translateY(275px);
     }
     100%{
-        transform: translateY(-200px);
+        transform: translateY(-275px);
     }
 }
